# pyzotero

./:  pyproject.toml  .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CITATION.bib  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  ISSUE_TEMPLATE.md  LICENSE.md  README.md  Untitled.ipynb  dump_contributors.py  item_atom_doc.xml  license.txt  manifest.in  pre-deploy.py  pyproject.toml  readme.md  setup.cfg  setup.py  test.py  test_etags.py  test_update.py  tests.py  utils.py  zotero.py  zotero_api.py  zotero_errors.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  usage_question.md
.github/PULL_REQUEST_TEMPLATE/: pr_template.md
.github/workflows/: tests.yml
.tangled/workflows/: ci.yml
doc/: Makefile  conf.py  index.rst  index.txt
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/epub/: .buildinfo  Pyzotero.epub  content.opf  genindex.html  index.html  py-modindex.html  search.html  toc.ncx
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.txt
doc/_build/latex/: Pyzotero.aux  Pyzotero.idx  Pyzotero.ilg  Pyzotero.ind  Pyzotero.out  Pyzotero.tex  Pyzotero.toc
doc/_templates/: layout.html
example/: .gitignore  local_base_use.py  local_copy_pdf.py  local_get_item_detail.py  local_get_notes.py  local_search_title.py
pyzotero/: sample.py  test_etags.py  test_update.py  test_zotero.py  tests.py  version.py  zotero.py  zotero_api.py  zotero_errors.py
pyzotero/test/: test_zotero.py
pyzotero/test/api_responses/: citation_doc.xml  collection_tags.json
src/pyzotero/: __init__.py  _client.py  _decorators.py  _helpers.py  _search.py  _types.py  _upload.py  _utils.py  cli.py  errors.py  filetransport.py  mcp_server.py  oauth.py  semantic_scholar.py  zotero.py  zotero_errors.py
test/: test_zotero.py
test/api_responses/: attachments_doc.json  citation_doc.xml  collection_doc.json  collection_versions.json  collections_doc.json  creation_doc.json  groups_doc.json  item.json  item_template.json  items.json  keys_doc.txt  tags_doc.json
tests/: mock_client.py  test_async.py  test_mcp.py  test_oauth.py  test_zotero.py
tests/api_responses/: attachments_doc.json  item_fields.json  item_types.json
