[metadata]
name = pyzotero
version = attr: pyzotero.version.__version__
description = Python wrapper for the Zotero API
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/urschrei/pyzotero
author = Stephan Hügel
author_email = urschrei@gmail.com
license = MIT
license_file = license.txt
keywords = zotero
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/urschrei/pyzotero
    Tracker = https://github.com/urschrei/pyzotero/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    feedparser >= 6; python_version >= "3.6.0"
    pytz
    requests >= 2.21.0
    bibtexparser
python_requires = >=3.6
setup_requires =
    setuptools_scm
    cython >= 0.29.0
tests_require =
    pytest >= 6.2.2
    httpretty
    python-dateutil
test_suite = test

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    pytest >= 6.2.2
all =
    %(test)s
